<resources>
    <string name="app_name">Uppgift 4.1.3 MailSender</string>
    <string name="string_main_subject">Ämne</string>
    <string name="string_main_recipent">Mottagare</string>
    <string name="string_main_message">Meddelande</string>
    <string name="string_main_choose_file">Bifoga fil</string>
    <string name="string_main_send">Skicka</string>
    <string name="string_main_attatchment">Bifogad fil:</string>
    <string name="string_main_remove_attachment">ta bort bifogad fil</string>
</resources>
